--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "axios": "^0.21.1",
     "firebase-tools": "^9.12.1",
     "react": "^17.0.0",
-    "react-dom": "^17.0.0"
+    "react-dom": "^17.0.0",
+    "react-youtube": "^7.13.1"
   },
   "scripts": {
     "start": "react-scripts start",
