--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "axios": "^0.21.1",
     "firebase-tools": "^9.12.1",
+    "movie-trailer": "^2.1.0",
     "react": "^17.0.0",
     "react-dom": "^17.0.0",
     "react-youtube": "^7.13.1"
