--- a/package.json
+++ b/package.json
@@ -3,12 +3,12 @@
   "version": "0.0.0",
   "private": true,
   "dependencies": {
-    "axios": "^0.21.1",
-    "firebase-tools": "^9.12.1",
+    "axios": "0.21.1",
+    "firebase-tools": "9.12.1",
     "movie-trailer": "^2.1.0",
-    "react": "^17.0.0",
-    "react-dom": "^17.0.0",
-    "react-youtube": "^7.13.1"
+    "react": "17.0.2",
+    "react-dom": "17.0.2",
+    "react-youtube": "7.13.1"
   },
   "scripts": {
     "start": "react-scripts start",
